dataset1235/2025-2/1153765216/users/2713785857/executions/2372395858_2086141900.log
== SUBMISSION (2025-08-28 18:23:59)
-- CODE: 
from math import *

lado= float(input(ladodounde))
apotema = float(input(lado/2*tan*(pi/11)))
area = (11*lado*apotema)/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    lado= float(input(ladodounde))
                      ^^^^^^^^^^
NameError: name 'ladodounde' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 18:24:12)
-- CODE: 
from math import *

lado= float(input(ladodounde))
apotema = float(input(lado/2*tan*(pi/11))
area = (11*lado*apotema)/2
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
File "XXXX", line 4
    apotema = float(input(lado/2*tan*(pi/11))
                   ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
